# ai-challenger-bot

./: ai-challenger-bot.cabal
app/: Main.hs
