name:                ai-challenger-bot
version:             0.1.0.0
synopsis:            Simple AI for the ai-challenger grid game
description:         Simple AI for the ai-challenget grid game
homepage:            http://github.com/mitchellrosen/ai-challenger-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
copyright:           2015 Mitchell Rosen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ai-challenger-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ai-challenger-bot
                     , containers
                     , mtl
                     , time
                     , transformers
  default-language:    Haskell2010

test-suite ai-challenger-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ai-challenger-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/ai-challenger-bot
